tests/errors/surf_name_12.experr
name 'pos' is not defined
